--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
+    "axios": "^1.3.4",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "grammy": "^1.15.3",
