--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
+    "pm2": "^5.3.0",
     "ts-node": "^10.0.0"
   },
   "scripts": {
-    "dev": "DEBUG=telegpt:* nodemon app.ts"
+    "dev": "DEBUG=telegpt:* nodemon app.ts",
+    "start": "tsc --build && NODE_ENV=production pm2 start dist/app.js --name telegpt",
+    "stop": "pm2 stop telegpt && pm2 delete telegpt",
+    "clean": "rm -rf dist"
   }
 }
